<resources>
    <string name="app_name">KWS</string>
    <string name="main_name">KWS</string>
    <string name="login_name">Log In</string>
    <string name="signin_name">Sign In</string>
    <string name="logout_name">Log Out</string>
    <string name="leaderboard_name">Leaderboard</string>
    <string name="user_name">User Details</string>
    <string name="appdata_get_name">Current App Data</string>
    <string name="appdata_set_name">Add App Data</string>
    <string name="country_name">Select country</string>
    <string name="page_platform_title">Platform</string>
    <string name="page_platform_text_welcome">Welcome to your\nKWS App</string>
    <string name="page_platform_text_content">This KWS App is powered by Kids Web Services (KWS). The KWS platform provides a set of compliance-as-a-service tools to create kid-safe, data-privacy compliant sites and apps. KWS handles all the legal complexity of data-collection in the kids space through one simple, customisable package - allowing you to focus instead on delivering awesome content.</string>
    <string name="page_platform_text_feature_1">Verifiable\nparental\nconsent</string>
    <string name="page_platform_text_feature_2">Loyalty\nplatform\nfor kids</string>
    <string name="page_platform_text_feature_3">Secure\nsingle\nsign-on</string>
    <string name="page_platform_text_feature_4">Parent\nPortal</string>
    <string name="page_platform_button_more">KNOW MORE ABOUT KIDS WEB SERVICES</string>
    <string name="page_features_title">Features</string>
    <string name="page_features_row_auth_title">Secure single sign-on</string>
    <string name="page_features_row_auth_content">Kids Web Services\' federated identity system (Single sign-on) allows kids and parents to create one secure login to access your collection of kid-safe apps and sites.</string>
    <string name="page_features_row_auth_button_login_not_logged">AUTHENTICATE USER</string>
    <string name="page_features_row_auth_button_login_logged">LOGGED IN AS </string>
    <string name="page_features_row_auth_button_doc">SEE DOCUMENTATION</string>
    <string name="page_features_row_notif_title">Push notifications</string>
    <string name="page_features_row_notif_content">Manage kid-safe, compliant push notifications for your users through the Kids Web Services platform. Enable, disable and schedule notifications to be sent to your audience on a regular basis.</string>
    <string name="page_features_row_notif_button_enable">ENABLE PUSH NOTIFICATIONS</string>
    <string name="page_features_row_notif_button_disable">DISABLE PUSH NOTIFICATIONS</string>
    <string name="page_features_row_notif_button_doc">SEE DOCUMENTATION</string>
    <string name="page_features_row_notif_popup_reg_success_title">Great!</string>
    <string name="page_features_row_notif_popup_reg_success_message">You\'ve successfully registered for push notifications.</string>
    <string name="page_features_row_notif_popup_reg_error_disable_parent_title">Oops - something went wrong!</string>
    <string name="page_features_row_notif_popup_reg_error_disable_parent_message">The parent appears to have disabled push notifications for this user.</string>
    <string name="page_features_row_notif_popup_reg_error_disable_user_title">Oops - something went wrong!</string>
    <string name="page_features_row_notif_popup_reg_error_disable_user_message">The user appears to have disabled push notifications on their device for this app.</string>
    <string name="page_features_row_notif_popup_reg_error_no_email_title">Oops - something went wrong!</string>
    <string name="page_features_row_notif_popup_reg_error_no_email_message">This user does not appear to have a parent email address associated with their account.</string>
    <string name="page_features_row_notif_popup_reg_error_firebase_not_setup_title">Oops - something went wrong!</string>
    <string name="page_features_row_notif_popup_reg_error_firebase_not_setup_message">Firebase does not seem to be set up correctly.</string>
    <string name="page_features_row_notif_popup_reg_error_firebase_nil_token_title">Oops - something went wrong!</string>
    <string name="page_features_row_notif_popup_reg_error_firebase_nil_token_message">Firebase could not get the notification token.</string>
    <string name="page_features_row_notif_popup_reg_error_network_title">Oops - something went wrong!</string>
    <string name="page_features_row_notif_popup_reg_error_network_message">A network error occurred when trying to subscribe to push notifications. Please try again!</string>
    <string name="page_features_row_notif_popup_unreg_success_title">Awesome!</string>
    <string name="page_features_row_notif_popup_unreg_success_message">You have successfully un-registered for push notifications in KWS!</string>
    <string name="page_features_row_notif_popup_unreg_error_network_title">Oops - something went wrong!</string>
    <string name="page_features_row_notif_popup_unreg_error_network_message">There was a network error when trying to un-register for push notifications in KWS. Please try again!</string>
    <string name="page_features_row_perm_title">Manage permissions</string>
    <string name="page_features_row_perm_content">Kids Web Services handles the complexities of dealing with personally identifiable information from young users. It allows you to request permission from a users\' parent when requesting data, so they can manage this for their child.</string>
    <string name="page_features_row_perm_button_add">ADD PERMISSIONS</string>
    <string name="page_features_row_perm_button_doc">SEE DOCUMENTATION</string>
    <string name="page_features_row_perm_popup_perm_title">KWS Permissions</string>
    <string name="page_features_row_perm_popup_perm_message">What information would you like permission for?</string>
    <string name="page_features_row_perm_popup_perm_option_email">Email address</string>
    <string name="page_features_row_perm_popup_perm_option_address">Address</string>
    <string name="page_features_row_perm_popup_perm_option_first_name">First Name</string>
    <string name="page_features_row_perm_popup_perm_option_last_name">Last Name</string>
    <string name="page_features_row_perm_popup_perm_option_newsletter">Newsletter</string>
    <string name="page_features_row_perm_popup_success_title">Great!</string>
    <string name="page_features_row_perm_popup_success_message">You\'ve successfully requested permissions from KWS.</string>
    <string name="page_features_row_perm_popup_error_no_email_title">Oops - something went wrong!</string>
    <string name="page_features_row_perm_popup_error_no_email_message">This user does not appear to have a parent\'s email address associated with their account.</string>
    <string name="page_features_row_perm_popup_error_network_title">Oops - something went wrong!</string>
    <string name="page_features_row_perm_popup_error_network_message">A network error occurred when trying to ask for permissions. Please try again later!</string>
    <string name="page_features_row_events_title">Events and points</string>
    <string name="page_features_row_events_content">Kids Web Services can handle a whole virtual multi-currency system for you. You can reward or deduct points for each user, check latest scores or manage leaderboards.</string>
    <string name="page_features_row_events_button_add20">REWARD 20 POINTS</string>
    <string name="page_features_row_events_button_sub10">DEDUCT 10 POINTS</string>
    <string name="page_features_row_events_button_score">GET SCORE</string>
    <string name="page_features_row_events_button_leaderboard">SEE LEADERBOARD</string>
    <string name="page_features_row_events_button_doc">SEE DOCUMENTATION</string>
    <string name="page_features_row_events_popup_success_20pcts_title">Congrats!</string>
    <string name="page_features_row_events_popup_success_20pcts_message">You just earned 20 points!</string>
    <string name="page_features_row_events_popup_success_10pcts_title">Oh no!</string>
    <string name="page_features_row_events_popup_success_10pcts_message">You just lost 10 points!</string>
    <string name="page_features_row_events_popup_success_score_title">Hey</string>
    <string name="page_features_row_events_popup_success_score_message">You\'re ranked %1$d with %2$d points!</string>
    <string name="page_features_row_events_popup_error_network_title">Oops - something went wrong!</string>
    <string name="page_features_row_events_popup_error_network_message">A network error occurred trying to subscribe to push notifications. Please try again!</string>
    <string name="page_features_row_invite_title">Invite friends</string>
    <string name="page_features_row_invite_content">You can invite users to your app by using their email address. KWS will ensure that this invite process is compliant with kids data privacy laws.</string>
    <string name="page_features_row_invite_button_invite">INVITE FRIEND</string>
    <string name="page_features_row_invite_button_doc">SEE DOCUMENTATION</string>
    <string name="page_features_row_invite_popup_email_title">Friend\'s email</string>
    <string name="page_features_row_invite_popup_email_message">Please enter your friend\'s email address to invite them</string>
    <string name="page_features_row_invite_popup_email_button_ok">Submit</string>
    <string name="page_features_row_invite_popup_email_button_cancel">Cancel</string>
    <string name="page_features_row_invite_popup_success_title">Hey!</string>
    <string name="page_features_row_invite_popup_success_message">You successfully invited your friend to your app through KWS!</string>
    <string name="page_features_row_invite_popup_error_network_title">Oops - something went wrong!</string>
    <string name="page_features_row_invite_popup_error_network_message">A network error occurred while inviting your friend to this app. Please try again!</string>
    <string name="page_features_row_appdata_title">App data</string>
    <string name="page_features_row_appdata_message">You can set any number of custom data points for each user to keep track of things that KWS does not. They are limited to numeric values to make sure your remain data-privacy compliant.</string>
    <string name="page_features_row_appdata_button_see">SEE APP DATA</string>
    <string name="page_features_row_appdata_button_doc">SEE DOCUMENTATION</string>
    <string name="page_features_row_popup_button_ok_generic">Got it</string>
    <string name="page_login_title">Log in</string>
    <string name="page_login_textfield_username_placeholder">Enter username</string>
    <string name="page_login_textfield_password_placeholder">Enter password</string>
    <string name="page_login_button_login">Log in</string>
    <string name="page_login_button_create">Create new user</string>
    <string name="page_login_popup_error_auth_title">Oops - something went wrong!</string>
    <string name="page_login_popup_error_auth_message">It seems that either the username or password you supplied was incorrect</string>
    <string name="page_login_popup_error_auth_ok_button">Got it</string>
    <string name="page_login_popup_error_network_title">Oops - something went wrong!</string>
    <string name="page_login_popup_error_network_message">There was a network error when trying to log in. Try again later!</string>
    <string name="page_login_popup_error_network_ok_button">Got it</string>
    <string name="page_signup_title">Sign Up</string>
    <string name="page_signup_textfield_username_placeholder">Enter a username</string>
    <string name="page_signup_textfield_password1_placeholder">Enter a password</string>
    <string name="page_signup_textfield_password2_placeholder">Repeat the password</string>
    <string name="page_leader_header_rank">#</string>
    <string name="page_leader_header_username">Username</string>
    <string name="page_leader_header_score">Score</string>
</resources>