<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="12dp"
    android:paddingBottom="12dp"
    android:orientation="horizontal"
    android:background="#efefef">

    <TextView
        android:id="@+id/leaderRank"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:text="@string/page_leader_header_rank"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/leaderUsername"
        android:layout_width="0dp"
        android:layout_weight="7"
        android:layout_height="match_parent"
        android:text="@string/page_leader_header_username"
        android:gravity="center_vertical"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/leaderPoints"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="match_parent"
        android:text="@string/page_leader_header_score"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"/>
</LinearLayout>
