<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:background="@drawable/shadow"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:padding="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ico_login"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/page_features_row_auth_title"
                android:textColor="@color/textColorBlack"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_gravity="center"/>

        </LinearLayout>

        <!-- content -->
        <TextView
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_marginBottom="32dp"
            android:textColor="@color/textColorDarkGray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/page_features_row_auth_content"/>

        <!-- button -->
        <Button
            android:id="@+id/authAction"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            style="@style/ButtonStyle2"
            android:text="@string/page_features_row_auth_button_login_not_logged"/>

        <Button
            android:id="@+id/authDocs"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="24dp"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            style="@style/ButtonStyle2"
            android:text="@string/page_features_row_auth_button_doc"/>

    </LinearLayout>
</LinearLayout>
