<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="@color/windowBackground"
    tools:context=".activities.login.LoginActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <!--toolbar-->
        <android.support.v7.widget.Toolbar
            android:id="@+id/loginToolbar"
            android:title="@string/page_login_title"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryDark"
            app:layout_scrollFlags="scroll|enterAlways">
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_marginTop="54dp"
        android:background="@color/windowBackground"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <EditText
            android:id="@+id/usernameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/page_login_textfield_username_placeholder"
            android:textColor="@color/textColorDarkGray"
            android:textColorHint="@color/textColorGray"
            android:inputType="text" />

        <EditText
            android:id="@+id/passwordEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/page_login_textfield_password_placeholder"
            android:textColor="@color/textColorDarkGray"
            android:textColorHint="@color/textColorGray"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="bottom">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/CreateUserButton"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:textColor="@color/textColorBlue"
                    android:background="@null"
                    style="?android:attr/borderlessButtonStyle"
                    android:text="@string/page_login_button_create"/>

                <Button
                    android:id="@+id/LoginUserButton"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    style="@style/ButtonStyle3"
                    android:text="@string/page_login_button_login"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
